[project]
name = "openrlhf-demo"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "torch==2.8.0",
    "transformers~=4.56.1",
    "flash-attn==2.8.3",
    "vllm[flashinfer]==0.10.2",
    "deepspeed==0.17.5",
    "liger_kernel==0.6.2",
    "openrlhf",
]

[tool.uv]
environments = ["sys_platform == 'linux' and platform_machine == 'x86_64'"]

[tool.uv.extra-build-dependencies]
flash-attn = [{ requirement = "torch", match-runtime = true }]
deepspeed = [{ requirement = "torch", match-runtime = true }]

[tool.uv.extra-build-variables]
flash-attn = { FLASH_ATTENTION_SKIP_CUDA_BUILD = "TRUE" }

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
# https://github.com/OpenRLHF/OpenRLHF/tree/35d12c7846dc37fd2f05f3c79ea4a5f0677ed1c4
openrlhf = { path = "OpenRLHF", editable = true }

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
# url = "https://mirrors.nju.edu.cn/pytorch/whl/cu128"
explicit = true
